--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Write credentials to file
-        run: echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > credentials.json
+        run: |
+          mkdir -p /var/app/current
+          echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > /var/app/current/credentials.json
+
+      - name: List files in application directory
+        run: ls -al /var/app/current
 
       - name: Deploy to Elastic Beanstalk
         run: |
