--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,7 @@ jobs:
 
       - name: Write credentials to file
         run: |
-          sudo mkdir -p /var/app/current
-          sudo echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > /var/app/current/credentials.json
-
-      - name: List files in application directory
-        run: sudo ls -al /var/app/current
+          echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > /var/app/current/credentials.json
 
       - name: Deploy to Elastic Beanstalk
         run: |
