--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,4 @@ jobs:
 
       - name: Write credentials to file
         run: |
-          touch /var/app/current/credentials.json
-          echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > /var/app/current/credentials.json
+          echo "${{ secrets.CREDENTIALS_FILE_CONTENT }}" > credentials.json
