--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,45 +21,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # If there's no package.json, this will just skip installs/builds
-      - name: Install deps (if any)
-        run: |
-          if [ -f package.json ]; then
-            npm ci || npm i
-          fi
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-      - name: Build (static / Vite / CRA / Next export)
-        run: |
-          BUILD_DIR="."
-          if [ -f package.json ]; then
-            # Prefer explicit build:static if you add it
-            if npm run | grep -q "build:static"; then
-              npm run build:static
-              BUILD_DIR="out"
-            else
-              # Try a standard build
-              if npm run | grep -q "build"; then
-                npm run build || true
-              fi
-              # Detect common outputs
-              if [ -d dist ]; then BUILD_DIR="dist"; fi
-              if [ -d build ]; then BUILD_DIR="build"; fi
-              if [ -d out ]; then BUILD_DIR="out"; fi
-              if [ -d public ] && [ "$BUILD_DIR" = "." ]; then BUILD_DIR="public"; fi
-            fi
-          fi
-          echo "BUILD_DIR=$BUILD_DIR" >> $GITHUB_ENV
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
 
-      - name: SPA 404 fallback (safe even if not SPA)
-        run: |
-          if [ -f "$BUILD_DIR/index.html" ] && [ ! -f "$BUILD_DIR/404.html" ]; then
-            cp "$BUILD_DIR/index.html" "$BUILD_DIR/404.html"
-          fi
+      - name: Generate static snapshot
+        run: scripts/staticize.sh
+        env:
+          BASE_HREF: /wedding-website/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ env.BUILD_DIR }}
+          path: out/site
 
   deploy:
     needs: build
